<resources>
    <string name="app_name">mktabty_attempt3</string>
    <string name="login">تسجيل الدخول</string>
    <string name="sign_up">حساب جديد</string>
    <string name="skip_reg">تخطي التسجيل</string>
    <string name="regis_with">تسجيل الدخول بواسطة</string>
    <string name="email">البريد الألكتروني  :</string>
    <string name="password">كلمة المرور  :</string>
    <string name="forgot_pass">نسيت كلمة المرور</string>
    <string name="create_account">انشئ حساب</string>
    <string name="title_activity_registration">registration</string>
    <string name="username">اسم المستخدم</string>
    <string name="email2">البريد الألكتروني</string>
    <string name="password2">كلمة السر :</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="main">الرئيسية</string>
    <string name="authors">المؤلفون</string>
    <string name="categs">الأقسام</string>
    <string name="hary_kteer">استمتع بالتحميل والاستماع مجاناً</string>
    <string name="subscribe">الأشتراك</string>
    <string name="about_book">عن الكتاب</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="members_books">كتب الأشتراك</string>
    <string name="kotob_lelbe3">كتب للبيع</string>
    <string name="kotob_mganya">كتب مجانية</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="following">يتابع</string>
    <string name="elsf7a_elsh5sya">الصفحة الشخصية</string>
    <string name="fav">المفضلة</string>
    <string name="subs">الاشتراكات</string>
    <string name="code_eleshtak">كود الاشتراك</string>
    <string name="code_elt5fed">كود التخفيض</string>
    <string name="e3dadat_el7sab">اعدادات الحساب</string>
    <string name="kotob_eleshtrak">كتب الاشتراك</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="mosharket_el2sdeqa2">مشاركة الاصدقاء</string>
    <string name="mosharket">مشاركة الأصدقاء</string>
    <string name="privacy_policy">سياسة الخصوصية</string>
    <string name="profile_settings">اعدادات الحساب</string>
    <string name="username2">اسم المستخدم :</string>
    <string name="pre_pass">كلمة السر السابقة :</string>
    <string name="new_pass">كلمة السر الجديدة :</string>
    <string name="re_new_pass">اعد كتابة كلمة السر :</string>
    <string name="dummy_txt_for_profile_settings">ارسل لي رسالة بالبريد الالكتروني عندما  :</string>
    <string name="cond1">يعلق احد الاصدقاء علي مشاركتي او مشاركات كنت قد علقت عليها سابقا</string>
    <string name="cond2">يقوم احد الاصدقاء بمتابعتي</string>
    <string name="cond3">يتفق احد الاصدقاء مع مشاركاتي</string>
    <string name="cond4">يشارك احد الاصدقاء مشاركاتي</string>
    <string name="show_pass">اظهر كلمة المرور</string>
    <string name="code_elt5feed">كود التخفيض</string>
    <string name="send">ارسال</string>
    <string name="cancel">الغاء</string>
    <string name="show_parts">عرض الاجزاء</string>
    <string name="code_sub">كود الأشتراك</string>
    <string name="name">الأسم :</string>
    <string name="the_comment">التعليق</string>
    <string name="share_da_comment">شارك التعليق</string>
    <string name="active_sub">تفعيل الأشتراك</string>
    <string name="elbaqa_elshahrya">الباقة الشهرية</string>
    <string name="subscribtion">الاشتراكات</string>
    <string name="dummy">fooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooour</string>
    <string name="favo">المفضلة</string>
    <string name="not_subbed">غير مشترك</string>
    <string name="subed">مشترك</string>
    <string name="profile">الملف الشخصي</string>
    <string name="name2">الاسم</string>
    <string name="female">انثي</string>
    <string name="male">ذكر</string>
    <string name="gender">النوع</string>
    <string name="birthday">تاريخ الميلاد</string>
    <string name="phone_no">رقم الهاتف</string>
    <string name="sub_status">حالة الاشتراك</string>
    <string name="expiration_date">تاريخ الانتهاء</string>
    <string name="no3_elbaqa">نوع الباقة</string>
    <string name="re_write_pass">اعد كتابة كلمة السر :</string>
    <string name="about_auther">عن المؤلف</string>
    <string name="reader">قارئ</string>
    <string name="review">مراجعة</string>
    <string name="rate">تقييم</string>
    <string name="free_books">كتب مجانية</string>
    <string name="sale_books">كتب للبيع</string>
    <string name="sub_books">كتب الاشتراك</string>
</resources>
