<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.FragmentProfileSettings"
    android:background="@drawable/main_bg2">


    <Button
        android:id="@+id/b4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/ic_drawer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/main_label_bg"
        android:gravity="center"
        android:text="@string/profile_settings"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/f1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="88dp"
        >
        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/mergied_bg_profilt_settings"
            android:scaleType="centerInside"
            android:layout_gravity="center"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_view"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            android:src="@drawable/tgoul" />

    </FrameLayout>



    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/f1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/profile_settings_tx_bg"
                android:gravity="start|center_vertical"
                android:hint="@string/email"
                android:maxLines="1"
                android:inputType="text"
                android:paddingRight="10dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/username2"
                android:layout_marginRight="20dp"
                android:background="@drawable/profile_settings_tx_bg"
                android:maxLines="1"
                android:inputType="text"
                android:layout_marginLeft="20dp"
                android:gravity="start|center_vertical"
                android:paddingRight="10dp"
                android:layout_gravity="center"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/pre_pass"
                android:background="@drawable/profile_settings_tx_bg"
                android:layout_marginRight="20dp"
                android:maxLines="1"
                android:layout_marginLeft="20dp"
                android:gravity="start|center_vertical"
                android:paddingRight="10dp"
                android:inputType="text"
                android:layout_gravity="center"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/new_pass"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:maxLines="1"
                android:background="@drawable/profile_settings_tx_bg"
                android:gravity="start|center_vertical"
                android:paddingRight="10dp"
                android:inputType="text"
                android:layout_gravity="center"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/re_new_pass"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:maxLines="1"
                android:inputType="text"
                android:background="@drawable/profile_settings_tx_bg"
                android:gravity="start|center_vertical"
                android:paddingRight="10dp"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginTop="8dp"
                android:layout_marginRight="18dp">
                <TextView
                    android:id="@+id/pt6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_pass"
                    android:textSize="12sp"
                    android:gravity="center"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/black_line"/>

            <TextView
                android:id="@+id/pt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:layout_marginRight="20dp"
                android:text="@string/dummy_txt_for_profile_settings"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginTop="5dp"
                android:layout_marginRight="18dp"
                >
                <TextView
                    android:id="@+id/pt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cond1"
                    android:textSize="12sp"
                    android:gravity="center"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginTop="5dp"
                android:layout_marginRight="18dp">
                <TextView
                    android:id="@+id/pt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cond2"
                    android:textSize="12sp"
                    android:gravity="center"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginTop="5dp"
                android:layout_marginRight="18dp">
                <TextView
                    android:id="@+id/pt4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cond3"
                    android:textSize="12sp"
                    android:gravity="center"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginTop="5dp"
                android:layout_marginRight="18dp">
                <TextView
                    android:id="@+id/pt5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cond4"
                    android:textSize="12sp"
                    android:gravity="center"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>